commiting a first changes, adding text in the file

--- a/_posts/0000-01-02-Bdaqiq.md
+++ b/_posts/0000-01-02-Bdaqiq.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+This is my text in the first file that I initally creatd in my branch in the terminal then I commited it, then I made a pull request, and now am adding the text and will probrably push the new changes again
 Use the left arrow to go back!
